# ns_trcd

./: .gitignore  README.md  ns_app.ui  pyproject.toml
ns_trcd/: __main__.py  common.py  comp_worker.py  exp_worker.py  generated_ui.py  oscilloscope.py  ui.py
tests/: test_comp_worker.py
