[tool.poetry]
name = "ns_trcd"
version = "0.1.0"
description = ""
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyqtgraph = "0.11.0rc0"
pyside2 = { url = "https://download.qt.io/snapshots/ci/pyside/5.12.6/latest/pyside2/PySide2-5.12.6-5.12.6-cp35.cp36.cp37-none-win_amd64.whl"}
shiboken2 = { url = "https://download.qt.io/snapshots/ci/pyside/5.12.6/latest/pyside2/shiboken2-5.12.6-5.12.6-cp35.cp36.cp37-none-win_amd64.whl"}
shiboken2_generator = { url = "https://download.qt.io/snapshots/ci/pyside/5.12.6/latest/pyside2/shiboken2_generator-5.12.6-5.12.6-cp35.cp36.cp37-none-win_amd64.whl"}
pyvisa = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
